# Stocklens

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  commands.MD  makefile  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yaml
adapters/embeddings/: sbert_embedder.py
adapters/metrics/: composite_market_provider.py  dummy_market_provider.py  fred_metrics_provider.py  yahoo_market_provider.py
adapters/rag/: faiss_store.py  loader.py
api/: main.py
api/routers/: agent.py  fetch_data.py  insights.py
core/agent/tools/: retrieve_docs.py
core/metrics/: entities.py  ports.py  validation.py
core/rag/: chunker_fixed.py  port_chunker.py  port_embedder.py  port_vector_store.py  rag_types.py
docker/: DockerFile.dev  docker-compose.yml
docs/demo/: 00_welcome.md  10_metrics_keys.md  20_rag_pipeline.md  30_api_usage.md  40_troubleshooting.txt  50.txt  60.txt
scripts/: ingest_docs.py
services/: metrics_service.py  validation_service.py
shared/: config.py  data_validation.yaml  di.py  frames.py  logging.py
stocklens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agent_echo.py  test_agent_prices.py  test_healthz.py  test_prices.py  test_validation.py
var/index/default/: config.json  id_map.json  index.faiss  meta_map.json
