[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["api*", "core*", "shared*", "adapters*", "services*"]

[project]
name = "stocklens"
version = "0.1.0"
description = "AI backend: agents + RAG + insights API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "loguru>=0.7.2",
  "orjson>=3.10.0",
  "redis>=5.0.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27,<0.28",
  "pandas>=2.2",
  "pandas-datareader>=0.10",
  "yfinance>=0.2.27"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.3.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["legacy/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fastapi.*", "httpx.*", "pytest.*", "pydantic_settings.*"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
